Revert "Fix spacing for successing lqip__wrappers"
This reverts commit 8f40ae1d9ddf2143f4dce66fb0ee3624d8ee3d01.

--- a/src/styles/atoms/img.scss
+++ b/src/styles/atoms/img.scss
@@ -7,13 +7,11 @@ img {
 p img,
 p figure,
 p video,
-p iframe,
-.lqip__wrapper {
+p iframe {
   & + img,
   & + figure,
   & + video,
-  & + iframe,
-  & + .lqip__wrapper {
+  & + iframe {
     margin-top: $golden-rem / 4;
   }
 }
